fixed spacing in portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,6 +101,4 @@ body {background-image: url('../images/circuit.png');
 
 .marginspace {margin-top: 10px;}
 
-.gallerypics {
-    padding-left: 200px;
-}
+.portfolioimagesmargin {margin: 7px;}
